SERVER-16615: Fix mmapv1 repairDatabase for long db paths